--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
-name: AzisabaSurvival
+name: ${project.name}
 main: jp.azisaba.main.survival.AzisabaSurvival
-version: 1.3.11
+version: ${project.version}
 author: AzisabaDev
-description: "Plugin for survival server."
+description: ${project.description}
+website: ${project.url}
 api-version: 1.13
 softdepend: ["Vault", "Essentials", "mcMMO", "Votifier"]
 commands:
