--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
 			<groupId>com.github.TechFortress</groupId>
 			<artifactId>GriefPrevention</artifactId>
 			<version>16.11.6</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.vexsoftware</groupId>
