--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
     </repository>
     <repository>
       <id>rayzr-repo</id>
-      <url>https://cdn.rawgit.com/Rayzr522/maven-repo/master/</url>
+      <url>https://rayzr.dev/repo/</url>
     </repository>
     <repository>
       <id>ess-repo</id>
@@ -70,7 +70,7 @@
     </repository>
     <repository>
       <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
+      <url>https://jitpack.io/</url>
     </repository>
     <repository>
       <id>sk89q-repo</id>
@@ -88,7 +88,7 @@
     <dependency>
       <groupId>me.rayzr522</groupId>
       <artifactId>jsonmessage</artifactId>
-      <version>1.0.0</version>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>com.github.MilkBowl</groupId>
