--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,10 @@
       <id>sk89q-repo</id>
       <url>https://maven.sk89q.com/repo/</url>
     </repository>
+    <repository>
+      <id>azisaba-repo</id>
+      <url>https://mvn-repo.azisaba.net/</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -106,7 +110,7 @@
     <dependency>
       <groupId>net.azisaba</groupId>
       <artifactId>HomoSystem</artifactId>
-      <version>1.1.5-beta</version>
+      <version>1.1.6-beta</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -119,15 +123,13 @@
       <groupId>com.vexsoftware</groupId>
       <artifactId>nuvotifier</artifactId>
       <version>2.5.0</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/nuvotifier-2.5.0.jar</systemPath>
+      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.gmail.nossr50</groupId>
+      <groupId>com.gmail.nossr50.mcMMO</groupId>
       <artifactId>mcMMO</artifactId>
-      <version>2.5.0</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/mcMMO.jar</systemPath>
+      <version>2.1.3</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.sk89q.worldguard</groupId>
