[Add] 金券を取得するコマンドを追加

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -21,6 +21,8 @@ permissions:
     default: true
   azisabasurvival.command.vote:
     default: true
+  azisabasurvival.command.vote.getitem:
+    default: op
   azisabasurvival.moneyfly.create:
     default: op
   azisabasurvival.moneyfly.buy:
