[Fix] 投票関連の修正

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -21,7 +21,7 @@ permissions:
     default: true
   azisabasurvival.command.vote:
     default: true
-  azisabasurvival.command.vote.getitem:
+  azisabasurvival.command.vote.give:
     default: op
   azisabasurvival.moneyfly.create:
     default: op
