Fix essentials repo url

--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
       <url>https://rayzr.dev/repo/</url>
     </repository>
     <repository>
-      <id>ess-repo</id>
-      <url>https://ci.ender.zone/plugin/repository/everything/</url>
+      <id>essentials-releases</id>
+      <url>https://repo.essentialsx.net/releases/</url>
     </repository>
     <repository>
       <id>jitpack.io</id>
