--- a/pom.xml
+++ b/pom.xml
@@ -115,9 +115,9 @@
       <version>2.7.2</version>
     </dependency>
     <dependency>
-      <groupId>com.gmail.nossr50.mcMMO</groupId>
-      <artifactId>mcMMO</artifactId>
-      <version>2.1.3</version>
+      <groupId>com.github.mcmmo-dev</groupId>
+      <artifactId>mcmmo</artifactId>
+      <version>master</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
